--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -10,7 +10,34 @@ header {
   background-color: #013A63;
   color: white;
   padding: 1rem 2rem;
-  text-align: center;
+}
+header .header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+header .logo {
+  display: flex;
+  align-items: center;
+}
+header .logo img {
+  height: 50px;
+  margin-right: 0.5rem;
+}
+header nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 1rem;
+}
+header nav a {
+  color: white;
+  text-decoration: none;
+}
+header .search input {
+  padding: 0.25rem;
 }
 .skip-link {
   position: absolute;
