--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <a class="skip-link" href="#content">Skip to main content</a>
   <header>
     <div class="header-top">
       <div class="logo">
-        <img src="/assets/images/hero.svg" alt="VR Business Relations logo" role="img" />
+        <img src="assets/images/hero.svg" alt="VR Business Relations logo" role="img" />
         <span class="site-name">VR Business Relations</span>
       </div>
       <form class="search" role="search">
@@ -21,10 +21,10 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/contact-us.html">Contact Us</a></li>
-        <li><a href="/what-is-business-relations.html">What is Business Relations?</a></li>
-        <li><a href="/business-benefits.html">Business Benefits</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact-us.html">Contact Us</a></li>
+        <li><a href="what-is-business-relations.html">What is Business Relations?</a></li>
+        <li><a href="business-benefits.html">Business Benefits</a></li>
       </ul>
     </nav>
   </header>
