Revamp layout with centered logo and simpler home page

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -9,15 +9,8 @@
 <body>
   <a class="skip-link" href="#content">Skip to main content</a>
   <header>
-    <div class="header-top">
-      <div class="logo">
-        <img src="assets/images/hero.svg" alt="VR Business Relations logo" role="img" />
-        <span class="site-name">VR Business Relations</span>
-      </div>
-      <form class="search" role="search">
-        <label for="search-input" class="sr-only">Search</label>
-        <input id="search-input" type="text" placeholder="Search..." />
-      </form>
+    <div class="logo-centered">
+      <img src="assets/images/hero.svg" alt="VR Business Relations logo" role="img" />
     </div>
     <nav>
       <ul>
